# py_web_hw-9

./: .gitignore  config.ini  connect.py  main.py  models.py  pyproject.toml  scrapin.py  seed.py
