[tool.poetry]
name = "py-web-hw-9"
version = "0.1.0"
description = "web-scraping"
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_9"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
